Latest from official source

--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/5.Send a Request for Complete Immunization History (QBP-slRSP)/3.Returning An Immunization History In Response To A Request For Immunization History Query.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/5.Send a Request for Complete Immunization History (QBP-slRSP)/3.Returning An Immunization History In Response To A Request For Immunization History Query.html
@@ -1,5 +1,5 @@
 <p>
- When the Request Immunization History query finds one high-confidence match, the matching client's immunization history is returned in the response. The following example message shows a simple response. Note that this query could have been a secondary query that occurred after preliminary identity resolution or a primary query with sufficient demographic data to permit matching.
+ When the Request Immunization History query finds one high-confidence match, the matching client&rsquo;s immunization history is returned in the response. The following example message shows a simple response. Note that this query could have been a secondary query that occurred after preliminary identity resolution or a primary query with sufficient demographic data to permit matching.
 </p>
 <p>
  <span style="font-family: Times New Roman,Times,serif,-webkit-standard;">
