--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/6.Acknowledging Query That Returns No Clients-slPatients/2.Using A Two-step Process To Request An Immunization History.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/6.Acknowledging Query That Returns No Clients-slPatients/2.Using A Two-step Process To Request An Immunization History.html
@@ -50,7 +50,7 @@
  </strong>
 </p>
 <p>
- Note that this interaction is simplified. The client of interest would be selected, and that client's information would populate the query requesting an immunization history. To be assured of success, the record source system would need to have registered the person in the MPI. In that way the person id in the record source would be available in the MPI.
+ Note that this interaction is simplified. The client of interest would be selected, and that client&rsquo;s information would populate the query requesting an immunization history. To be assured of success, the record source system would need to have registered the person in the MPI. In that way the person id in the record source would be available in the MPI.
 </p>
 <p>
  <br/>
