--- a/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/6.Acknowledging Query That Returns No Clients-slPatients/4.Message Is Rejected Due To Unrecognized Message Type.html
+++ b/7.Appendices/1.Appendix A - Guidance on Usage and Example Messages/6.Acknowledging Query That Returns No Clients-slPatients/4.Message Is Rejected Due To Unrecognized Message Type.html
@@ -25,11 +25,11 @@
  <sup>
   29
  </sup>
- PD1-16 indicates the status from the message sender's perspective. In the case of a message coming from a provider, it indicates if the client is an active patient of that sender.
+ PD1-16 indicates the status from the message sender&rsquo;s perspective. In the case of a message coming from a provider, it indicates if the client is an active patient of that sender.
 </p>
 <p>
  <sup>
-  30
+  30&nbsp;
  </sup>
  See Send Error in ACK for dealing with errors if either of these two tasks identifies problems.
 </p>
@@ -85,13 +85,13 @@
 </p>
 <p>
  <sup>
-  39
+  39&nbsp;
  </sup>
  This does not mean that every message must have one of the required OBX. It just means that this concept needs to be known to put the evaluation and forecast in context.
 </p>
 <p>
  <sup>
-  40
+  40&nbsp;
  </sup>
  Vaccine type 30956-7 is preferred, but support for 38890-0 is needed to support backward compatibility.
 </p>
