--- a/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/3.Data Types and Data Type Flavors/1.Value Set Bindings at the Data Type Level.html
+++ b/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/3.Data Types and Data Type Flavors/1.Value Set Bindings at the Data Type Level.html
@@ -1,5 +1,5 @@
 <p>
- Another addition due to conformance methodology was binding strength. &nbsp;Since Binding strength for value sets is a requirement in the conformance methodology, binding strength was added to the following subcomponents of data types after discussion between CDC and NIST:
+ Another addition due to conformance methodology was binding strength. &nbsp;Since Binding strength for value sets is a requirement in the conformance methodology, binding strength was added to the following subcomponents of data types after discussion between CDC and NIST:&acirc;&euro;&macr;&acirc;&euro;&macr;&nbsp;
 </p>
 <p>
  <br/>
@@ -9,140 +9,141 @@
   <tr>
    <td colspan="3" style="width: 99.665%;">
     <strong>
-     Table 7: Data types, including Base and Associated Flavors, with Binding Strength Information Added
+     Table 7: Data types, including Base and Associated Flavors, with Binding Strength Information Added&acirc;&euro;&macr;
     </strong>
+    &acirc;&euro;&macr;&nbsp;
    </td>
   </tr>
   <tr aria-rowindex="1">
    <td data-celllook="69905">
     <p>
-     Data Type
+     Data Type&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Subcomponent
+     Subcomponent&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Binding Strength
+     Binding Strength&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="2">
    <td colspan="1" data-celllook="69905" rowspan="2">
     <p>
-     CE
+     CE&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     CE.3
+     CE.3&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="3">
    <td data-celllook="69905">
     <p>
-     CE.6
+     CE.6&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="4">
    <td data-celllook="69905">
     <p>
-     CQ
+     CQ&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     CQ.2
+     CQ.2&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Unspecified (U)
+     Unspecified (U)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="5">
    <td colspan="1" data-celllook="69905" rowspan="2">
     <p>
-     CWE
+     CWE&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     CWE.3
+     CWE.3&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="6">
    <td data-celllook="69905">
     <p>
-     CWE.6
+     CWE.6&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="7">
    <td colspan="1" data-celllook="69905" rowspan="3">
     <p>
-     CX
+     CX&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     CX.3
+     CX.3&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="8">
    <td data-celllook="69905">
     <p>
-     CX.4
+     CX.4&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Suggested (S)
+     Suggested (S)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="9">
    <td data-celllook="69905">
     <p>
-     CX.5
+     CX.5&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -157,307 +158,307 @@
    </td>
    <td data-celllook="69905">
     <p>
-     EI.2
+     EI.2&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Suggested (S)
+     Suggested (S)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="11">
    <td data-celllook="69905">
     <p>
-     EI.4
+     EI.4&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="12">
    <td colspan="1" data-celllook="69905" rowspan="2">
     <p>
-     HD
+     HD&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     HD.1
+     HD.1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Suggested (S)
+     Suggested (S)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="13">
    <td data-celllook="69905">
     <p>
-     HD.3
+     HD.3&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="14">
    <td data-celllook="69905">
     <p>
-     LA2
+     LA2&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     LA2.4
+     LA2.4&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Suggested (S)
+     Suggested (S)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="15">
    <td colspan="1" data-celllook="69905" rowspan="3">
     <p>
-     MSG
+     MSG&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSG.1
+     MSG.1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="16">
    <td data-celllook="69905">
     <p>
-     MSG.2
+     MSG.2&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="17">
    <td data-celllook="69905">
     <p>
-     MSG.3
+     MSG.3&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="18">
    <td data-celllook="69905">
     <p>
-     PT
+     PT&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PT.1
+     PT.1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="19">
    <td data-celllook="69905">
     <p>
-     VID
+     VID&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     VID.1
+     VID.1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="20">
    <td colspan="1" data-celllook="69905" rowspan="2">
     <p>
-     XAD
+     XAD&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     XAD.6
+     XAD.6&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="21">
    <td data-celllook="69905">
     <p>
-     XAD.7
+     XAD.7&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="22">
    <td colspan="1" data-celllook="69905" rowspan="3">
     <p>
-     XCN
+     XCN&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     XCN.9
+     XCN.9&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Suggested (S)
+     Suggested (S)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="23">
    <td data-celllook="69905">
     <p>
-     XCN.10
+     XCN.10&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="24">
    <td data-celllook="69905">
     <p>
-     XCN.13
+     XCN.13&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="25">
    <td colspan="1" data-celllook="69905" rowspan="2">
     <p>
-     XON
+     XON&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     XON.6
+     XON.6&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Suggested (S)
+     Suggested (S)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="26">
    <td data-celllook="69905">
     <p>
-     XON.7
+     XON.7&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="27">
    <td data-celllook="69905">
     <p>
-     XPN
+     XPN&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     XPN.7
+     XPN.7&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="28">
    <td data-celllook="69905">
     <p>
-     XPN_M
+     XPN_M&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     XPN.7
+     XPN.7&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="29">
    <td colspan="1" data-celllook="69905" rowspan="2">
     <p>
-     XTN
+     XTN&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     XTN.2
+     XTN.2&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="30">
    <td data-celllook="69905">
     <p>
-     XTN.3
+     XTN.3&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Required (R)
+     Required (R)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
