--- a/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/4.Segments/1.Added naming convention for Segment flavors.html
+++ b/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/4.Segments/1.Added naming convention for Segment flavors.html
@@ -1,3 +1,3 @@
 <p>
- IGAMT allows users to create Segment flavors, which are segments that are derived from the HL7 v2.5.1 standard. The naming convention that was adopted for segment flavors in IGAMT affixes a postfix of &ldquo;IZ&rdquo; and the version number of the flavor to the base segment (e.g., RXA_IZ01). In the National IG, there are segment flavors, however, the naming convention does not differentiate between segments.
+ IGAMT allows users to create Segment flavors, which are segments that are derived from the HL7 v2.5.1 standard. The naming convention that was adopted for segment flavors in IGAMT affixes a postfix of &ldquo;IZ&rdquo; and the version number of the flavor to the base segment (e.g., RXA_IZ01).&acirc;&euro;&macr; In the National IG, there are segment flavors, however, the naming convention does not differentiate between segments.&acirc;&euro;&macr;&acirc;&euro;&macr;
 </p>
