--- a/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/5.Profiles/1.Adding Profile Cardinality.html
+++ b/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/5.Profiles/1.Adding Profile Cardinality.html
@@ -1,5 +1,5 @@
 <p>
- There were a few segments in profiles where cardinality information was required in IGAMT but was not specified by the National IG. Thus, cardinality information was populated using the IGAMT default for the following segments:
+ There were a few segments in profiles where cardinality information was required in IGAMT but was not specified by the National IG. Thus, cardinality information was populated using the IGAMT default for the following segments:&acirc;&euro;&macr;&nbsp;
 </p>
 <p>
  <br/>
@@ -16,147 +16,147 @@
   <tr aria-rowindex="1">
    <td data-celllook="69905">
     <p>
-     Profile
+     Profile&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Location
+     Location&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Cardinality
+     Cardinality&acirc;&euro;&macr;&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="2">
    <td colspan="1" data-celllook="69905" rowspan="5">
     <p>
-     Z34
+     Z34&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH
+     MSH&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Added Standard Default
+     Added Standard Default&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="3">
    <td data-celllook="69905">
     <p>
-     SFT
+     SFT&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Added Standard Default
+     Added Standard Default&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="4">
    <td data-celllook="69905">
     <p>
-     QPD
+     QPD&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Added Standard Default
+     Added Standard Default&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="5">
    <td data-celllook="69905">
     <p>
-     RCP
+     RCP&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Added Standard Default
+     Added Standard Default&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="6">
    <td data-celllook="69905">
     <p>
-     DSC
+     DSC&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Added Standard Default
+     Added Standard Default&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="7">
    <td colspan="1" data-celllook="69905" rowspan="5">
     <p>
-     Z44
+     Z44&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH
+     MSH&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Added Standard Default
+     Added Standard Default&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="8">
    <td data-celllook="69905">
     <p>
-     SFT
+     SFT&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Added Standard Default
+     Added Standard Default&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="9">
    <td data-celllook="69905">
     <p>
-     QPD
+     QPD&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Added Standard Default
+     Added Standard Default&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="10">
    <td data-celllook="69905">
     <p>
-     RCP
+     RCP&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Added Standard Default
+     Added Standard Default&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="11">
    <td data-celllook="69905">
     <p>
-     DSC
+     DSC&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Added Standard Default
+     Added Standard Default&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
