--- a/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/5.Profiles/3.Relocating Conformance Statements.html
+++ b/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/5.Profiles/3.Relocating Conformance Statements.html
@@ -1,5 +1,5 @@
 <p>
- As stated in the Segment section, some conformance statements were moved from the segment level to the profile level to reduce the number of segment flavors. The table below summarizes the conformance statement, where it was originally located in the National IG, and which profile it was moved to. Additionally, the conformance statements below will now appear in the &ldquo;Conformance Profiles&rdquo; section of the IG in IGAMT.
+ As stated in the Segment section, some conformance statements were moved from the segment level to the profile level to reduce the number of segment flavors. The table below summarizes the conformance statement, where it was originally located in the National IG, and which profile it was moved to. Additionally, the conformance statements below will now appear in the &ldquo;Conformance Profiles&rdquo; section of the IG in IGAMT.&acirc;&euro;&macr;&nbsp;
 </p>
 <p>
  <br/>
@@ -11,22 +11,23 @@
     <strong>
      Table 10: Conformance Statements Moved from Segment to Profile Level
     </strong>
+    &acirc;&euro;&macr;&nbsp;
    </td>
   </tr>
   <tr aria-rowindex="1">
    <td data-celllook="69905">
     <p>
-     Conformance Statement Moved
+     Conformance Statement Moved&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     From (Segment and field)
+     From (Segment and field)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     To (Profile)
+     To (Profile)&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -35,30 +36,30 @@
     <p>
      IZ-17
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-9
+     MSH-9&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td colspan="1" data-celllook="69905" rowspan="5">
     <p>
-     Z22
+     Z22&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="3">
    <td data-celllook="69905">
     <p>
-     IZ-20
+     IZ-20&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     OBX-1
+     OBX-1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -67,25 +68,25 @@
     <p>
      IZ-41
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-17
+     MSH-17&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="5">
    <td data-celllook="69905">
     <p>
-     IZ-42
+     IZ-42&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-15
+     MSH-15&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -94,14 +95,14 @@
     <p>
      IZ-43
      <sup>
-      **
+      **&acirc;&euro;&macr;
      </sup>
      &nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-21
+     MSH-21&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -110,42 +111,42 @@
     <p>
      IZ-51
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-9
+     MSH-9&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td colspan="1" data-celllook="69905" rowspan="4">
     <p>
-     Z23
+     Z23&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="8">
    <td data-celllook="69905">
     <p>
-     IZ-52
+     IZ-52&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-16
+     MSH-16&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="9">
    <td data-celllook="69905">
     <p>
-     IZ-53
+     IZ-53&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-15
+     MSH-15&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -154,13 +155,13 @@
     <p>
      IZ-54
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-21
+     MSH-21&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -169,18 +170,18 @@
     <p>
      IZ-55
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-9
+     MSH-9&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td colspan="1" data-celllook="69905" rowspan="5">
     <p>
-     Z34
+     Z34&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -189,37 +190,37 @@
     <p>
      IZ-56
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-21
+     MSH-21&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="13">
    <td data-celllook="69905">
     <p>
-     IZ-57
+     IZ-57&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-15
+     MSH-15&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="14">
    <td data-celllook="69905">
     <p>
-     IZ-58
+     IZ-58&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-16
+     MSH-16&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -228,54 +229,54 @@
     <p>
      IZ-67
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     QPD-1
+     QPD-1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="16">
    <td data-celllook="69905">
     <p>
-     IZ-20
+     IZ-20&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     OBX-1
+     OBX-1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td colspan="1" data-celllook="69905" rowspan="6">
     <p>
-     Z32
+     Z32&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="17">
    <td data-celllook="69905">
     <p>
-     IZ-52
+     IZ-52&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-16
+     MSH-16&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="18">
    <td data-celllook="69905">
     <p>
-     IZ-53
+     IZ-53&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-15
+     MSH-15&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -284,13 +285,13 @@
     <p>
      IZ-59
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-9
+     MSH-9&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -299,13 +300,13 @@
     <p>
      IZ-60
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-21
+     MSH-21&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -314,42 +315,42 @@
     <p>
      IZ-67
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     QPD-1
+     QPD-1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="22">
    <td data-celllook="69905">
     <p>
-     IZ-52
+     IZ-52&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-16
+     MSH-16&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td colspan="1" data-celllook="69905" rowspan="5">
     <p>
-     Z31
+     Z31&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="23">
    <td data-celllook="69905">
     <p>
-     IZ-53
+     IZ-53&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-15
+     MSH-15&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -358,13 +359,13 @@
     <p>
      IZ-59
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-21
+     MSH-21&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -373,13 +374,13 @@
     <p>
      IZ-61
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-9
+     MSH-9&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -388,42 +389,42 @@
     <p>
      IZ-67
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     QPD-1
+     QPD-1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="27">
    <td data-celllook="69905">
     <p>
-     IZ-52
+     IZ-52&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-16
+     MSH-16&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td colspan="1" data-celllook="69905" rowspan="5">
     <p>
-     Z33
+     Z33&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="28">
    <td data-celllook="69905">
     <p>
-     IZ-53
+     IZ-53&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-15
+     MSH-15&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -432,14 +433,14 @@
     <p>
      IZ-59
      <sup>
-      **
+      **&acirc;&euro;&macr;
      </sup>
      &nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-9
+     MSH-9&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -448,13 +449,13 @@
     <p>
      IZ-63
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-21
+     MSH-21&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -463,13 +464,13 @@
     <p>
      IZ-71
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     QPD-1
+     QPD-1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -478,42 +479,42 @@
     <p>
      IZ-55
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-9
+     MSH-9&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td colspan="1" data-celllook="69905" rowspan="7">
     <p>
-     Z44
+     Z44&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="33">
    <td data-celllook="69905">
     <p>
-     IZ-57
+     IZ-57&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-15
+     MSH-15&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="34">
    <td data-celllook="69905">
     <p>
-     IZ-58
+     IZ-58&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-58
+     MSH-58&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -522,25 +523,25 @@
     <p>
      IZ-55
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-21
+     MSH-21&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="36">
    <td data-celllook="69905">
     <p>
-     IZ-57
+     IZ-57&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-15
+     MSH-15&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -549,14 +550,14 @@
     <p>
      IZ-64
      <sup>
-      **
+      **&acirc;&euro;&macr;
      </sup>
      &nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-21
+     MSH-21&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -565,55 +566,55 @@
     <p>
      IZ-68
      <sup>
-      **
+      **&acirc;&euro;&macr;
      </sup>
      &nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     QPD-1
+     QPD-1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="39">
    <td data-celllook="69905">
     <p>
-     IZ-20
+     IZ-20&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     OBX-1
+     OBX-1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td colspan="1" data-celllook="69905" rowspan="6">
     <p>
-     Z42
+     Z42&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="40">
    <td data-celllook="69905">
     <p>
-     IZ-52
+     IZ-52&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-16
+     MSH-16&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="41">
    <td data-celllook="69905">
     <p>
-     IZ-53
+     IZ-53&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-15
+     MSH-15&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -622,14 +623,14 @@
     <p>
      IZ-59
      <sup>
-      **
+      **&acirc;&euro;&macr;
      </sup>
      &nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-9
+     MSH-9&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -638,14 +639,14 @@
     <p>
      IZ-65
      <sup>
-      **
+      **&acirc;&euro;&macr;
      </sup>
      &nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     MSH-21
+     MSH-21&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -656,11 +657,12 @@
      <sup>
       **
      </sup>
+     &acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     QPD-1
+     QPD-1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -668,6 +670,6 @@
 </table>
 <p>
  <sup>
-  **The conformance statement is separated out into subcomponents of fields due to IGAMT requirements. Subcomponents are noted by a character postfix (e.g., 17a)
+  **The conformance statement is separated out into subcomponents of fields due to IGAMT requirements. Subcomponents are noted by a character postfix (e.g., 17a)&acirc;&euro;&macr;&nbsp;
  </sup>
 </p>
