--- a/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/2.Value Sets.html
+++ b/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/2.Value Sets.html
@@ -1,5 +1,5 @@
 <p>
- The HL7 v2 Conformance Methodology specification, which is applied in IGAMT, provides mechanisms to further define requirements for value set definitions. The concepts of Extensibility, Stability, Content, and code usage information are not stated in the National IG. The information regarding extensibility, stability, content, and usage were obtained from the HL7 v2.8.2 IG (http://www.hl7.org/implement/standards/product_brief.cfm?product_id=490) for the following value sets:
+ The HL7 v2 Conformance Methodology specification, which is applied in IGAMT, provides mechanisms to further define requirements for value set definitions. The concepts of Extensibility, Stability, Content, and code usage information are not stated in the National IG. The information regarding extensibility, stability, content, and usage were obtained from the HL7 v2.8.2 IG (http://www.hl7.org/implement/standards/product_brief.cfm?product_id=490) for the following value sets:&acirc;&euro;&macr;&nbsp;
 </p>
 <p>
  <br/>
@@ -10,7 +10,7 @@
    <td colspan="3" style="width: 99.8831%;">
     <div style="text-align: center;">
      <strong>
-      Table 2: Value Sets with Information Added from the v2.8.2 IG
+      Table 2: Value Sets with Information Added from the v2.8.2 IG&acirc;&euro;&macr;&nbsp;
      </strong>
     </div>
    </td>
@@ -18,240 +18,241 @@
   <tr aria-rowindex="1">
    <td colspan="3" data-celllook="69905">
     <p>
-     List of Value Sets
+     List of Value Sets&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="2">
    <td data-celllook="69905">
     <p>
-     0001-Sex
+     0001-Sex&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0125-Value type
+     0125-Value type&acirc;&euro;&macr;&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0516-Error severity
+     0516-Error severity&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="3">
    <td data-celllook="69905">
     <p>
-     0003-Event Type
+     0003-Event Type&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0126-Quantity limited request
+     0126-Quantity limited request&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     NIP001-Immunization information source
+     NIP001-Immunization information source&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="4">
    <td data-celllook="69905">
     <p>
-     0004-Patient Class&nbsp;
+     0004&acirc;&euro;&macr;&acirc;&euro;&macr;-Patient Class&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0136-Yes/No indicator
+     0136-Yes/No indicator&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     NIP002-Substance refusal reason
+     NIP002-Substance refusal reason&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="5">
    <td data-celllook="69905">
     <p>
-     0008-Acknowledgement Code
+     0008-Acknowledgement Code&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0163-Body site
+     0163-Body site&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     NIP003-Observation identifiers
+     NIP003-Observation identifiers&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="6">
    <td data-celllook="69905">
     <p>
-     0063-Relationship
+     0063-Relationship&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0190-Address type
+     0190-Address type&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PHVS_VaccinationContraindications_IIS
+     PHVS_VaccinationContraindications_IIS&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="7">
    <td data-celllook="69905">
     <p>
-     0064-Financial Class
+     0064-Financial Class&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0200-Name type
+     0200-Name type&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PHVS_ImmunizationFundingSource_IIS
+     PHVS_ImmunizationFundingSource_IIS&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="8">
    <td data-celllook="69905">
     <p>
-     0076-Message Type
+     0076-Message Type&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0203-Identifier type
+     0203-Identifier type&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PHVS_VaccinationReaction_IIS
+     PHVS_VaccinationReaction_IIS&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="9">
    <td data-celllook="69905">
     <p>
-     0085-Observation result status codes interpretation
+     0085-Observation result status codes interpretation&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0208-Query response status
+     0208-Query response status&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PHVS_VaccinationSpecialIndications_IIS
+     PHVS_VaccinationSpecialIndications_IIS&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="10">
    <td data-celllook="69905">
     <p>
-     0086-Plan Type ID
+     0086-Plan Type ID&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0322-Completion status
+     0322-Completion status&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PHVS_VISBarcodes_IIS
+     PHVS_VISBarcodes_IIS&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="11">
    <td data-celllook="69905">
     <p>
-     0091-Query Priority
+     0091-Query Priority&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0354-Message structure
+     0354-Message structure&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PHVS_VISVaccines_IIS
+     PHVS_VISVaccines_IIS&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="12">
    <td data-celllook="69905">
     <p>
-     0103-Processing ID
+     0103-Processing ID&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0357-Message error status codes
+     0357-Message error status codes&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PHVS_RouteOfAdministration_IIS
+     PHVS_RouteOfAdministration_IIS&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="13">
    <td data-celllook="69905">
     <p>
-     0104-Version ID
+     0104-Version ID&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0363-Assigning authority*
+     0363-Assigning authority*&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PHVS_UnitsOfMeasure_CDC*
+     PHVS_UnitsOfMeasure_CDC*&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="14">
    <td data-celllook="69905">
     <p>
-     0119-Order Control Codes
+     0119-Order Control Codes&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0441-Immunization registry status
+     0441-Immunization registry status&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
+     &acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
  </tbody>
 </table>
 <p>
- *: For these value sets, appropriate usage was determined after conversations between CDC and NIST
+ *: For these value sets, appropriate usage was determined after conversations between CDC and NIST&acirc;&euro;&macr;&nbsp;
 </p>
 <p>
  <br/>
 </p>
 <p>
- For the value sets where the HL7 v2.8.2 IG proved not to be an adequate resource, Extensibility, Stability, Content, and value usage, were added in the National IG, as based off the base standard or after discussions between CDC and NIST. This applied for the following tables:
+ For the value sets where the HL7 v2.8.2 IG proved not to be an adequate resource, Extensibility, Stability, Content, and value usage, were added in the National IG, as based off the base standard or after discussions between CDC and NIST. This applied for the following tables:&acirc;&euro;&macr;&nbsp;
 </p>
 <p>
  <br/>
@@ -262,7 +263,7 @@
    <td colspan="3" style="width: 99.8796%;">
     <div style="text-align: center;">
      <strong>
-      Table 3: Value Sets with Information Added After Discussions
+      Table 3: Value Sets with Information Added After Discussions&acirc;&euro;&macr;&nbsp;
      </strong>
     </div>
    </td>
@@ -270,61 +271,61 @@
   <tr aria-rowindex="1">
    <td colspan="3" data-celllook="69905">
     <p>
-     List of Value Sets
+     List of Value Sets&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="2">
    <td data-celllook="69905">
     <p>
-     0010-Physician ID
+     0010-Physician ID&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
      0215-Publicity code
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0356-Alternate character set handling scheme
+     0356-Alternate character set handling scheme&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="3">
    <td data-celllook="69905">
     <p>
-     0061-Check digit scheme
+     0061-Check digit scheme&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0220-Living arrangement
+     0220-Living arrangement&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0360-Degree
+     0360-Degree&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="4">
    <td data-celllook="69905">
     <p>
-     0078-Abnormal Flags
+     0078-Abnormal Flags&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0288-Census tract
+     0288-Census tract&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0361-Application
+     0361-Application&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -333,37 +334,37 @@
     <p>
      0102-Delayed Acknowledgement Type
      <sup>
-      ^
+      ^&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0289-County/parish
+     0289-County/parish&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0362-Facility
+     0362-Facility&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="6">
    <td data-celllook="69905">
     <p>
-     0155-Accept/Application acknowledgment conditions
+     0155-Accept/Application acknowledgment conditions&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0296-Language
+     0296-Language&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
      0396- Coding system
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
@@ -371,19 +372,19 @@
   <tr aria-rowindex="7">
    <td data-celllook="69905">
     <p>
-     0201-Telecommunication use code
+     0201-Telecommunication use code&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0297-CN ID source
+     0297-CN ID source&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
      0471-Query name
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
@@ -391,19 +392,19 @@
   <tr aria-rowindex="8">
    <td data-celllook="69905">
     <p>
-     0202-Telecommunication equipment type
+     0202-Telecommunication equipment type&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0300-Namespace ID
+     0300-Namespace ID&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
      0533-Application error code
      <sup>
-      **
+      **&acirc;&euro;&macr;
      </sup>
      &nbsp;
     </p>
@@ -412,37 +413,37 @@
   <tr aria-rowindex="9">
    <td data-celllook="69905">
     <p>
-     0204-Organizational name type
+     0204-Organizational name type&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     0301-Universal ID type
+     0301-Universal ID type&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PHVS_ImmunizationScheduleIdentifier_IIS
+     PHVS_ImmunizationScheduleIdentifier_IIS&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="10">
    <td data-celllook="69905">
     <p>
-     0207-Processing mode
+     0207-Processing mode&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
      0323-Action code
      <sup>
-      **
+      **&acirc;&euro;&macr;&nbsp;
      </sup>
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PHVS_FundingEligibilityObsMethod_IIS
+     PHVS_FundingEligibilityObsMethod_IIS&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -450,19 +451,19 @@
 </table>
 <p>
  <sub>
-  ^: For this value set, the 2.4 version of the value set was included, as a 2.5.1 version of the value set was not available in IGAMT. Values were based on the IGAMT default
+  ^: For this value set, the 2.4 version of the value set was included, as a 2.5.1 version of the value set was not available in IGAMT. Values were based on the IGAMT default&acirc;&euro;&macr;&nbsp;
  </sub>
 </p>
 <p>
  <sub>
-  **Added after discussions between CDC and NIST
+  **Added after discussions between CDC and NIST&acirc;&euro;&macr;&nbsp;
  </sub>
 </p>
 <p>
  Additionally, two value sets, HL70064-Financial class and HL70636-Assigning authority, had local code placeholders, as indicated by three asterisks (***) or an ellipse (&hellip;), removed from their value sets. These values were removed to ensure that other NIST tooling would not literally interpret the local code placeholders as actual values.&nbsp;
 </p>
 <p>
- While not specified in the National IG, value sets maybe defined as static or dynamic as this information was defined in IGAMT due its adherence to conformance methodology. Dynamic table data was updated according to the information available on the original sources&rsquo; websites at the time of development. It is important to note that for the dynamic tables listed below, the values will not be updated routinely in IGAMT, and individuals should refer to the original source for the most current list of codes:
+ While not specified in the National IG, value sets maybe defined as static or dynamic as this information was defined in IGAMT due its adherence to conformance methodology. Dynamic table data was updated according to the information available on the original sources&rsquo; websites at the time of development. It is important to note that for the dynamic tables listed below, the values will not be updated routinely in IGAMT, and individuals should refer to the original source for the most current list of codes:&acirc;&euro;&macr;&acirc;&euro;&macr;
 </p>
 <p>
  <br/>
@@ -473,7 +474,7 @@
    <td colspan="2" style="width: 99.8922%;">
     <div style="text-align: center;">
      <strong>
-      Table 4: Dynamic Value Sets
+      Table 4: Dynamic Value Sets&acirc;&euro;&macr;
      </strong>
     </div>
    </td>
@@ -481,72 +482,72 @@
   <tr aria-rowindex="1">
    <td data-celllook="69905">
     <p>
-     Table Name
+     Table Name&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     Website
+     Website&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="2">
    <td data-celllook="69905">
     <p>
-     0227-Manufacturers of vaccines
+     0227-Manufacturers of vaccines&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     https://www2a.cdc.gov/vaccines/iis/iisstandards/vaccines.asp?rpt=mvx
+     https://www2a.cdc.gov/vaccines/iis/iisstandards/vaccines.asp?rpt=mvx&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="3">
    <td data-celllook="69905">
     <p>
-     0292-Codes for vaccines administered
+     0292-Codes for vaccines administered&acirc;&euro;&macr;&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     https://www2a.cdc.gov/vaccines/iis/iisstandards/vaccines.asp?rpt=cvx
+     https://www2a.cdc.gov/vaccines/iis/iisstandards/vaccines.asp?rpt=cvx&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="4">
    <td data-celllook="69905">
     <p>
-     PHVS_VISBarcodes_IIS
+     PHVS_VISBarcodes_IIS&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     https://www.cdc.gov/vaccines/programs/iis/code-sets/vis-barcode-lookup-table.html
+     https://www.cdc.gov/vaccines/programs/iis/code-sets/vis-barcode-lookup-table.html&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="5">
    <td data-celllook="69905">
     <p>
-     PHVS_VISVaccines_IIS
+     PHVS_VISVaccines_IIS&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     https://phinvads.cdc.gov/vads/ViewValueSet.action?id=70A3BC7A-D5D7-E411-8970-0017A477041A
+     https://phinvads.cdc.gov/vads/ViewValueSet.action?id=70A3BC7A-D5D7-E411-8970-0017A477041A&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="6">
    <td data-celllook="69905">
     <p>
-     PHVS_UnitsOfMeasure_CDC
+     PHVS_UnitsOfMeasure_CDC&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     https://phinvads.cdc.gov/vads/ViewValueSet.action?id=8CD34BBC-617F-DD11-B38D-00188B398520
+     https://phinvads.cdc.gov/vads/ViewValueSet.action?id=8CD34BBC-617F-DD11-B38D-00188B398520&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
