--- a/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/4.Segments/2.Relocating Conformance Statements.html
+++ b/7.Appendices/3.Appendix C - The v2.5.1 National Implementation Guide for Immunization Messaging Conversion to Computable Format Findings Document/4.Segments/2.Relocating Conformance Statements.html
@@ -1,5 +1,5 @@
 <p>
- Segment flavors typically resulted from the application of conformance statements with slightly different content to the same segments in different message profiles. The workgroup found that by moving a conformance statement from the segment level to the profile level reduced the number of segment flavors that was needed. For example, the conformance statement IZ-43 (One occurrence of MSH-21(Message Profile Identifier) SHALL contain the constant value &ldquo;Z22^CDCPHINVS&rdquo;), which previously applied to the MSH segment in Z22, now applies to the Z22 message profile, which reduced the number of MSH segment flavors from eight to one. Similarly, the following segments had conformance statements removed and relocated to the appropriate message profile (see table below). Further, these conformance statements will now appear in the &ldquo;Conformance Profiles&rdquo; section of the IG in IGAMT.
+ Segment flavors typically resulted from the application of conformance statements with slightly different content to the same segments in different message profiles.&acirc;&euro;&macr; The workgroup found that by moving a conformance statement from the segment level to the profile level reduced the number of segment flavors that was needed.&acirc;&euro;&macr; For example, the conformance statement IZ-43 (One occurrence of MSH-21(Message Profile Identifier) SHALL contain the constant value &ldquo;Z22^CDCPHINVS&rdquo;), which previously applied to the MSH segment in Z22, now applies to the Z22 message profile, which reduced the number of MSH segment flavors from eight to one. Similarly, the following segments had conformance statements removed and relocated to the appropriate message profile (see table below). Further, these conformance statements will now appear in the &ldquo;Conformance Profiles&rdquo; section of the IG in IGAMT.&acirc;&euro;&macr;&nbsp;
 </p>
 <p>
  <br/>
@@ -9,7 +9,7 @@
   <tr>
    <td colspan="6" style="width: 99.6853%;">
     <strong>
-     Table 8: Message segments and fields where Conformance Statements were Added to the Profile Level
+     Table 8: Message segments and fields where Conformance Statements were Added to the Profile Level&acirc;&euro;&macr;
     </strong>
     &nbsp;
    </td>
@@ -17,119 +17,128 @@
   <tr aria-rowindex="1">
    <td data-celllook="69905">
     <p>
-     MSH
+     MSH&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     OBX
+     OBX&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     QPD
+     QPD&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PID
+     PID&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     ORC
+     ORC&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     RXA
+     RXA&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="2">
    <td data-celllook="69905">
     <p>
-     MSH-15
+     MSH-15&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     OBX-1
+     OBX-1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     QPD-1
+     QPD-1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     PID-1
+     PID-1&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     ORC-3
+     ORC-3&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     RXA-20
+     RXA-20&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="3">
    <td data-celllook="69905">
     <p>
-     MSH-16
+     MSH-16&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
+     &acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
-     QPD-6
+     QPD-6&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
+     &acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
+     &acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
+     &acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
   <tr aria-rowindex="4">
    <td data-celllook="69905">
     <p>
-     MSH-21
+     MSH-21&acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
+     &acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
+     &acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
+     &acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
+     &acirc;&euro;&macr;&nbsp;
     </p>
    </td>
    <td data-celllook="69905">
     <p>
+     &acirc;&euro;&macr;&nbsp;
     </p>
    </td>
   </tr>
@@ -139,5 +148,5 @@
  <br/>
 </p>
 <p>
- It should also be noted that, when a conformance statement was added to the appropriate profile, the conformance statement was a copy of the logic statement in the National IG. For specific information about conformance statements affected, please see Table 10 in the &ldquo;Profile&rdquo; section below.
+ It should also be noted that, when a conformance statement was added to the appropriate profile, the conformance statement was a copy of the logic statement in the National IG. For specific information about conformance statements affected, please see Table 10 in the &ldquo;Profile&rdquo; section below.&acirc;&euro;&macr;&acirc;&euro;&macr;&nbsp;
 </p>
