--- a/1.Introduction.html
+++ b/1.Introduction.html
@@ -4,7 +4,7 @@
   <sup>
    1
   </sup>
-  with a number of other systems, including Electronic Health Record systems (EHR-S). Health Level Seven (HL7) is a nationally recognized standard for electronic data exchange between systems housing health care data. The HL7 standard is a key factor that supports this two-way exchange of information because it defines a syntax or grammar for formulating the messages that carry this information. It further describes a standard vocabulary that is used in these messages. It does not depend on specific software, that is, it is platform independent.
+  with a number of other systems (and so forth), including Electronic Health Record systems (EHR-S). Health Level Seven (HL7) is a nationally recognized standard for electronic data exchange between systems housing health care data. The HL7 standard is a key factor that supports this two-way exchange of information because it defines a syntax or grammar for formulating the messages that carry this information. It further describes a standard vocabulary that is used in these messages. It does not depend on specific software, that is, it is platform independent.
  </span>
 </p>
 <p>
