--- a/1.Introduction/1.Preface.html
+++ b/1.Introduction/1.Preface.html
@@ -13,7 +13,7 @@
 <p>
  Due to these differences, this IG serves as interim documentation and is
  <strong>
-  only to be used by CDC&rsquo;s Immunization HL7 Project Team and AIRA&rsquo;s Onboarding Shared Services (OSS) team
+  only to be used by CDC's Immunization HL7 Project Team and AIRA's Onboarding Shared Services (OSS) team
  </strong>
  , until differences can be accounted for in a new version of the National IG. If you would like to use the ICIG, or have questions about the ICIG, please reach out to Chrissy Miner at jyy8@cdc.gov. &nbsp;
 </p>
